# haskell-hw

./: .gitignore  README.md  stack.yaml
hw1/: hw1.cabal
hw1/src/Task/: DayOfWeek.hs  Entities.hs  Lists.hs  Monoids.hs  Nats.hs  Primitives.hs  Split.hs  Trees.hs  Vector.hs
hw1/test_src/: DayOfWeekSpec.hs  ListsSpec.hs  PrimitivesSpec.hs  SplitSpec.hs
hw2/: hw2.cabal
hw2/src/Task/: Const.hs  Either.hs  Expressions.hs  Identity.hs  List.hs  MathParser.hs  Monad.hs  MonadFish.hs  MonadJoin.hs  Monads.hs  Pair.hs  Parser.hs  Partials.hs  Tree.hs
hw2/test_src/: ExpressionsSpec.hs  ListSpec.hs  MathParserSpec.hs  ParserSpec.hs
hw3/: hw3.cabal
hw3/src/: Main.hs
hw3/src/lib/: Evaluator.hs  Interpreter.hs  Parser.hs  Pipe.hs  PrettyShow.hs  Structure.hs
hw3/test_src/: EvaluatorSpec.hs  InterpreterSpec.hs
hw4/: hw4.cabal
hw4/src/: Builder.hs  FS.hs  Iso.hs  Lens.hs  Renew.hs  TH.hs  THSamples.hs  Tree.hs
