name:                hw1
version:             0.1
author:              Radimir Sorokin

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
