name:                hw2
version:             0.1
author:              Radimir Sorokin

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:   src
  exposed-modules:  Task.Either
                  , Task.Expressions
                  , Task.Identity
                  , Task.MathParser
                  , Task.Monad
                  , Task.MonadFish
                  , Task.MonadJoin
                  , Task.Monads
                  , Task.Parser
                  , Task.Partials
                  , Task.Tree
  ghc-options:      -Wall -Worp
  build-depends:    base
                  , containers
                  , hw1
  default-language: Haskell2010

test-suite hw2-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test_src
  main-is:          Spec.hs
  other-modules:
  build-depends:    base
                  , containers
                  , hw1
                  , hspec
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
