name:                hw2
version:             0.1
author:              Radimir Sorokin

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:   src
  exposed-modules:  Task.Const
                  , Task.Either
                  , Task.Expressions
                  , Task.Identity
                  , Task.List
                  , Task.MathParser
                  , Task.Monad
                  , Task.MonadFish
                  , Task.MonadJoin
                  , Task.Monads
                  , Task.Parser
                  , Task.Partials
                  , Task.Tree
  ghc-options:      -Wall -fno-warn-orphans
  build-depends:    base
                  , containers
  default-language: Haskell2010

test-suite hw2-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test_src
  main-is:          Spec.hs
  other-modules:    ExpressionsSpec
                  , ListSpec
                  , ParserSpec
                  , MathParserSpec
  build-depends:    base
                  , containers
                  , hw2
                  , hspec
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-type-defaults
  default-language: Haskell2010
