name:                hw3
version:             0.1
author:              Radimir Sorokin

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:   src/lib
  exposed-modules:  Interpreter
                  , Parser
                  , Structure
                  , Pipe
                  , Evaluator
                  , PrettyShow
  ghc-options:      -Wall
  build-depends:    base
                  , mtl
                  , containers
                  , megaparsec
                  , text
  default-language: Haskell2010

executable interpreter
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3
                     , mtl
                     , containers
                     , megaparsec
                     , text
  default-language:    Haskell2010

test-suite hw3-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test_src
  main-is:          Spec.hs
  other-modules:    EvaluatorSpec
                  , InterpreterSpec
  build-depends:    base
                  , hspec
                  , hw3
                  , mtl
                  , containers
                  , megaparsec
                  , text
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-type-defaults
  default-language: Haskell2010
